# RenForge

./: .gitattributes  README.md  package-lock.json  package.json
src/: App.vue  actions.js  locales.js  store.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/tools/: build_unrpa.py  unrpa.spec
src-tauri/tools/unrpyc/: unrpyc.spec
src/assets/: style.css
src/components/: AiModal.vue  AudioGallery.vue  Dashboard.vue  Editor.vue  FallbackEditor.vue  GlobalMessages.vue  Header.vue  ImageGallery.vue
