[package]
name = "renforge"
version = "1.1.0"
description = "A standalone tool for modding and translating Ren'Py visual novels"
authors = ["foulnike"]
edition = "2021"
repository = "https://github.com/foulnike/RenForge"
license = "GPL-3.0"

[lib]
name = "renforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
